# entity_data

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
common/: Cargo.toml
common/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: archetype.rs  component_storage.rs  entity.rs  entity_storage.rs  entry.rs  lib.rs  private.rs  state.rs  system.rs  tests.rs  utils.rs
src/archetype/: component.rs  component_storage.rs  entities.rs
src/entity_storage/: component.rs
src/system/: component.rs
