[package]
name = "entity_data"
version = "1.6.0"
authors = ["a7292969 <a7292969@gmail.com>"]
edition = "2021"
keywords = ["data", "interfaces", "dynamic-dispatch", "ecs"]
categories = ["data-structures", "rust-patterns"]
description = "A container for entity component data."
repository = "https://github.com/a7292969/entity_data"
readme = "README.md"
license-file = "LICENSE.md"

[workspace]
members = ["macros"]

[dependencies]
ahash = "0.8"
bit-set = "0.5"
memoffset = "0.6"
smallvec = { version = "1.9", features = ["const_generics"] }
macros = { package = "entity_data-macros", path = "macros", version = "1.2" }

[dev-dependencies]
rand = "0.8"
