[package]
name = "entity_data"
version = "1.11.0"
authors = ["volodya7292 <a7292969@gmail.com>"]
edition = "2021"
keywords = ["data", "interfaces", "dynamic-dispatch", "ecs"]
categories = ["data-structures", "rust-patterns"]
description = "A container for entity component data."
repository = "https://github.com/volodya7292/entity_data"
readme = "README.md"
license-file = "LICENSE.md"

[workspace]
members = ["macros"]

[dependencies]
macros = { package = "entity_data-macros", path = "macros", version = "1.7" }
ahash = "0.8"
index-pool = "1.0"
memoffset = "0.9"
smallvec = { version = "1.10", features = ["const_generics"] }
rayon = { version = "1.7", optional = true }

[dev-dependencies]
rand = "0.8"
