[package]
name = "entity_data-macros"
version = "1.6.0"
edition = "2021"
authors = ["a7292969 <a7292969@gmail.com>"]
description = "Macros for entity_data crate."
repository = "https://github.com/a7292969/entity_data/macros"
license-file = "../LICENSE.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
