[package]
name = "entity_data-macros"
version = "1.6.1"
edition = "2021"
authors = ["volodya7292 <a7292969@gmail.com>"]
description = "Macros for entity_data crate."
repository = "https://github.com/volodya7292/entity_data/tree/main/macros"
license-file = "../LICENSE.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
